# TacticsCrafter

./: .editorconfig  CMakeLists.txt  README.md  test.lua
.github/workflows/: TacticsCrafter.yml
cmake/: FindQtDeploy.cmake
data/: api.lua
data/core/: 00_api_common.lua  00_api_util.lua  10_api_items.lua  10_api_memory.lua
data/items/: data.lua  id.lua
data/symbols/: sce.lua  symbols.lua
include/libtactics/: tactics.h
patches/: slowdown.lua
res/: icon.icns
src/: CMakeLists.txt
src/TacticsCrafter/: CMakeLists.txt  FileSelector.cpp  FileSelector.h  MainWindow.cpp  MainWindow.h  ScriptView.cpp  ScriptView.h  TabBuild.cpp  TabBuild.h  TabScripts.cpp  TabScripts.h  main.cpp
src/TacticsCrafter/API/: API.cpp  API.h  ASM.cpp  Memory.cpp  Patch.cpp  Script.cpp  Symbols.cpp
src/TacticsCrafter/Core/: Assembler.cpp  Assembler.h  Changeset.cpp  Changeset.h  ImageBuilder.cpp  ImageBuilder.h  Lua.h  Script.cpp  Script.h  ScriptManager.cpp  ScriptManager.h  State.h
src/TacticsCrafter/State/: State.cpp  State.h  StatePatch.cpp  StatePatch.h  StateScript.cpp  StateScript.h  StateSymbols.cpp  StateSymbols.h
src/TacticsCrafter/UI/: FileSelector.cpp  FileSelector.h  MainWindow.cpp  MainWindow.h  ScriptView.cpp  ScriptView.h  TabBuild.cpp  TabBuild.h  TabScripts.cpp  TabScripts.h
src/libtactics/: API.cpp  API.h  Assembler.cpp  Assembler.h  CMakeLists.txt  Changeset.cpp  Changeset.h  Context.cpp  Context.h  ImageBuilder.cpp  ImageBuilder.h  Lua.h  Option.cpp  Option.h  Path.cpp  Path.h  ResourcePool.h  Script.cpp  Script.h  State.h
src/libtactics/API/: API.cpp  API.h  ASM.cpp  Memory.cpp  Misc.cpp  Patch.cpp  Script.cpp  Symbols.cpp
src/libtactics/sys/macos/: Path.mm
src/libtactics/sys/unix/: Path.cpp
src/libtactics/sys/win32/: Path.cpp
src/tcraft/: CMakeLists.txt  main.c
